Fixes the screen being unresponsive in the beginning

--- a/Project/scan4pase/Base.lproj/Main.storyboard
+++ b/Project/scan4pase/Base.lproj/Main.storyboard
@@ -248,7 +248,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wb2-v6-bFd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2040" y="-936"/>
+            <point key="canvasLocation" x="2004" y="-936"/>
         </scene>
         <!--Cart-->
         <scene sceneID="JP0-Vy-j21">
@@ -428,29 +428,29 @@
                                                     <exclude reference="OrC-I1-Ldf"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="4Zx-G0-0Lk"/>
-                                                    <exclude reference="SMP-6k-lfx"/>
-                                                    <exclude reference="PTy-i1-c6K"/>
-                                                    <exclude reference="dGP-mO-xuS"/>
-                                                    <exclude reference="iCB-gp-ChW"/>
-                                                    <exclude reference="Jea-lb-qfc"/>
-                                                    <exclude reference="2KM-h9-cbN"/>
-                                                    <exclude reference="Gk8-l8-hsj"/>
-                                                    <exclude reference="xYL-yK-fpF"/>
                                                     <exclude reference="7iT-kc-Nf7"/>
                                                     <exclude reference="Fb1-Lz-JAF"/>
                                                     <exclude reference="aJr-XL-cLW"/>
-                                                    <exclude reference="Ews-o7-fk9"/>
-                                                    <exclude reference="usD-mt-FCA"/>
-                                                    <exclude reference="N8z-2G-cnr"/>
-                                                    <exclude reference="OcO-2L-7zt"/>
-                                                    <exclude reference="vvq-bR-ary"/>
-                                                    <exclude reference="EBq-q2-AW5"/>
-                                                    <exclude reference="Gll-bz-Xe6"/>
-                                                    <exclude reference="NZv-gg-pDT"/>
+                                                    <exclude reference="Jea-lb-qfc"/>
                                                     <exclude reference="EPW-Q5-qtA"/>
                                                     <exclude reference="d2E-sV-Vgj"/>
                                                     <exclude reference="lGi-J6-fNX"/>
+                                                    <exclude reference="2KM-h9-cbN"/>
+                                                    <exclude reference="Gk8-l8-hsj"/>
+                                                    <exclude reference="xYL-yK-fpF"/>
+                                                    <exclude reference="N8z-2G-cnr"/>
+                                                    <exclude reference="OcO-2L-7zt"/>
+                                                    <exclude reference="vvq-bR-ary"/>
+                                                    <exclude reference="Ews-o7-fk9"/>
+                                                    <exclude reference="usD-mt-FCA"/>
+                                                    <exclude reference="PTy-i1-c6K"/>
+                                                    <exclude reference="dGP-mO-xuS"/>
+                                                    <exclude reference="iCB-gp-ChW"/>
+                                                    <exclude reference="EBq-q2-AW5"/>
+                                                    <exclude reference="Gll-bz-Xe6"/>
+                                                    <exclude reference="NZv-gg-pDT"/>
+                                                    <exclude reference="4Zx-G0-0Lk"/>
+                                                    <exclude reference="SMP-6k-lfx"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
@@ -466,29 +466,29 @@
                                                     <include reference="OrC-I1-Ldf"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="4Zx-G0-0Lk"/>
-                                                    <include reference="SMP-6k-lfx"/>
-                                                    <include reference="PTy-i1-c6K"/>
-                                                    <include reference="dGP-mO-xuS"/>
-                                                    <include reference="iCB-gp-ChW"/>
-                                                    <include reference="Jea-lb-qfc"/>
-                                                    <include reference="2KM-h9-cbN"/>
-                                                    <include reference="Gk8-l8-hsj"/>
-                                                    <include reference="xYL-yK-fpF"/>
                                                     <include reference="7iT-kc-Nf7"/>
                                                     <include reference="Fb1-Lz-JAF"/>
                                                     <include reference="aJr-XL-cLW"/>
-                                                    <include reference="Ews-o7-fk9"/>
-                                                    <include reference="usD-mt-FCA"/>
-                                                    <include reference="N8z-2G-cnr"/>
-                                                    <include reference="OcO-2L-7zt"/>
-                                                    <include reference="vvq-bR-ary"/>
-                                                    <include reference="EBq-q2-AW5"/>
-                                                    <include reference="Gll-bz-Xe6"/>
-                                                    <include reference="NZv-gg-pDT"/>
+                                                    <include reference="Jea-lb-qfc"/>
                                                     <include reference="EPW-Q5-qtA"/>
                                                     <include reference="d2E-sV-Vgj"/>
                                                     <include reference="lGi-J6-fNX"/>
+                                                    <include reference="2KM-h9-cbN"/>
+                                                    <include reference="Gk8-l8-hsj"/>
+                                                    <include reference="xYL-yK-fpF"/>
+                                                    <include reference="N8z-2G-cnr"/>
+                                                    <include reference="OcO-2L-7zt"/>
+                                                    <include reference="vvq-bR-ary"/>
+                                                    <include reference="Ews-o7-fk9"/>
+                                                    <include reference="usD-mt-FCA"/>
+                                                    <include reference="PTy-i1-c6K"/>
+                                                    <include reference="dGP-mO-xuS"/>
+                                                    <include reference="iCB-gp-ChW"/>
+                                                    <include reference="EBq-q2-AW5"/>
+                                                    <include reference="Gll-bz-Xe6"/>
+                                                    <include reference="NZv-gg-pDT"/>
+                                                    <include reference="4Zx-G0-0Lk"/>
+                                                    <include reference="SMP-6k-lfx"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -657,7 +657,7 @@
                                 <include reference="ZCh-Fc-tFK"/>
                                 <include reference="Frx-dM-g3N"/>
                                 <include reference="gB7-Ly-Kzq"/>
-                                <exclude reference="pa5-SW-ARV"/>
+                                <include reference="pa5-SW-ARV"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="13q-AR-TpI"/>
