--- a/Project/scan4pase/Base.lproj/Main.storyboard
+++ b/Project/scan4pase/Base.lproj/Main.storyboard
@@ -78,12 +78,20 @@
                                 <color key="textColor" red="0.16862745100000001" green="0.50980392159999999" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Me: dhruvy427@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQh-Ei-5s4">
+                                <rect key="frame" x="70" y="658" width="274" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="U6o-JT-vAD" firstAttribute="centerX" secondItem="CYP-dB-KaM" secondAttribute="centerX" id="1W1-xW-21s"/>
                             <constraint firstItem="37P-67-lPd" firstAttribute="centerX" secondItem="CYP-dB-KaM" secondAttribute="centerX" id="6A2-bj-uPR"/>
                             <constraint firstItem="ajx-JQ-6nx" firstAttribute="top" secondItem="sVm-aq-kYQ" secondAttribute="bottom" constant="53" id="EcM-uP-EGR"/>
+                            <constraint firstItem="MQh-Ei-5s4" firstAttribute="centerX" secondItem="CYP-dB-KaM" secondAttribute="centerX" id="P0l-bE-fj5"/>
+                            <constraint firstItem="Pc2-SE-RV1" firstAttribute="top" secondItem="MQh-Ei-5s4" secondAttribute="bottom" constant="8" id="RE8-G9-Wm6"/>
                             <constraint firstItem="hbj-C6-3IZ" firstAttribute="centerX" secondItem="CYP-dB-KaM" secondAttribute="centerX" id="Umr-xy-3F6"/>
                             <constraint firstItem="37P-67-lPd" firstAttribute="top" secondItem="hbj-C6-3IZ" secondAttribute="bottom" constant="8" id="W4P-t4-ITn"/>
                             <constraint firstItem="hbj-C6-3IZ" firstAttribute="top" secondItem="U6o-JT-vAD" secondAttribute="bottom" constant="8" id="YBH-It-Muj"/>
@@ -638,9 +646,6 @@
                                 <exclude reference="pa5-SW-ARV"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="Jzn-6L-Kcp"/>
-                                <exclude reference="Pt4-0x-Zx7"/>
-                                <exclude reference="YYR-gj-Bga"/>
                                 <exclude reference="1VJ-FH-aql"/>
                                 <exclude reference="wF2-Ih-kmm"/>
                                 <exclude reference="0ij-Gq-xfD"/>
@@ -659,6 +664,9 @@
                                 <exclude reference="S9n-vp-3v4"/>
                                 <exclude reference="cI1-Ee-WXN"/>
                                 <exclude reference="N44-Y7-wiB"/>
+                                <exclude reference="Jzn-6L-Kcp"/>
+                                <exclude reference="Pt4-0x-Zx7"/>
+                                <exclude reference="YYR-gj-Bga"/>
                                 <exclude reference="1bU-UE-8m6"/>
                                 <exclude reference="L2t-r3-m0L"/>
                                 <exclude reference="pzX-ZF-coq"/>
@@ -677,9 +685,6 @@
                                 <include reference="pa5-SW-ARV"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="Jzn-6L-Kcp"/>
-                                <include reference="Pt4-0x-Zx7"/>
-                                <include reference="YYR-gj-Bga"/>
                                 <include reference="1VJ-FH-aql"/>
                                 <include reference="wF2-Ih-kmm"/>
                                 <include reference="0ij-Gq-xfD"/>
@@ -698,6 +703,9 @@
                                 <include reference="S9n-vp-3v4"/>
                                 <include reference="cI1-Ee-WXN"/>
                                 <include reference="N44-Y7-wiB"/>
+                                <include reference="Jzn-6L-Kcp"/>
+                                <include reference="Pt4-0x-Zx7"/>
+                                <include reference="YYR-gj-Bga"/>
                                 <include reference="1bU-UE-8m6"/>
                                 <include reference="L2t-r3-m0L"/>
                                 <include reference="pzX-ZF-coq"/>
